--- a/public/index.html
+++ b/public/index.html
@@ -2,114 +2,137 @@
 <html lang="bn">
 <head>
     <meta charset="UTF-8">
-    <title>প্রে অ্যাজ প্যারাডক্স - পূর্ণাঙ্গ ইসলামিক সময়সূচী</title>
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&family=Amiri&display=swap" rel="stylesheet">
+    <title>প্রে অ্যাজ প্যারাডক্স - রমজান বিশেষ</title>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;700&family=Amiri:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --islamic-gold: #c19a6b;
-            --islamic-green: #228b22;
+            --gold: #D4AF37;
+            --dark-blue: #0A3D62;
+            --islamic-green: #228B22;
         }
 
         body {
             font-family: 'Hind Siliguri', sans-serif;
-            background: url('https://i.ibb.co/4Y3b3k8/islamic-bg.png') #1a5a4c;
+            background: linear-gradient(rgba(10, 61, 98, 0.9), 
+                        rgba(10, 61, 98, 0.7)),
+                        url('https://i.ibb.co/7b0YKh2/ramadan-bg.jpg');
+            background-size: cover;
+            background-attachment: fixed;
             color: white;
             margin: 0;
             min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .header {
             text-align: center;
             padding: 2rem;
-            background: rgba(0,0,0,0.7);
             position: relative;
-            border-bottom: 5px solid var(--islamic-gold);
+            overflow: hidden;
         }
 
-        .digital-clock {
-            font-size: 2.5em;
-            letter-spacing: 3px;
-            background: rgba(0,0,0,0.5);
-            padding: 15px;
-            border-radius: 10px;
-            margin: 20px auto;
-            width: fit-content;
-            font-family: 'Courier New', monospace;
+        .header::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200px;
+            height: 3px;
+            background: var(--gold);
         }
 
-        .time-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
-            padding: 20px;
-            max-width: 1000px;
+        .moon-stars {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            width: 80px;
+            opacity: 0.8;
+        }
+
+        .main-content {
+            flex: 1;
+            max-width: 1200px;
             margin: 0 auto;
-        }
-
-        .time-card {
-            background: rgba(255,255,255,0.1);
             padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            backdrop-filter: blur(5px);
-            border: 1px solid var(--islamic-gold);
         }
 
-        .bangla-date {
-            font-family: 'Hind Siliguri', sans-serif;
-            font-size: 1.2em;
-            color: var(--islamic-gold);
+        .prayer-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
         }
 
-        .arabic-date {
+        .prayer-card {
+            background: rgba(255,255,255,0.1);
+            padding: 25px;
+            border-radius: 15px;
+            backdrop-filter: blur(8px);
+            border: 2px solid var(--gold);
+            transition: transform 0.3s ease;
+        }
+
+        .prayer-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .hijri-date {
             font-family: 'Amiri', serif;
-            font-size: 1.5em;
+            font-size: 1.8em;
+            color: var(--gold);
+            text-align: center;
+            margin: 20px 0;
             direction: rtl;
         }
 
-        #datePicker {
-            padding: 12px;
-            border: 2px solid var(--islamic-gold);
-            border-radius: 8px;
-            background: rgba(0,0,0,0.3);
-            color: white;
+        footer {
+            background: rgba(0,0,0,0.7);
+            text-align: center;
+            padding: 20px;
+            margin-top: auto;
+            border-top: 2px solid var(--gold);
+        }
+
+        .credit {
+            font-family: 'Hind Siliguri', sans-serif;
             font-size: 1.1em;
-            margin: 15px 0;
+        }
+
+        .credit a {
+            color: var(--gold);
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
+    <img src="https://i.ibb.co/3CJZQ7H/moon-stars.png" class="moon-stars" alt="চাঁদ ও তারা">
+
     <div class="header">
-        <h1>🕌 প্রে অ্যাজ প্যারাডক্স</h1>
-        <div class="digital-clock" id="liveClock"></div>
-        <input type="date" id="datePicker">
-        
-        <div class="bangla-date" id="banglaDate"></div>
-        <div class="arabic-date" id="hijriDate"></div>
+        <h1 style="font-size: 2.8em; margin-bottom: 10px;">🕌 প্রে অ্যাজ প্যারাডক্স</h1>
+        <div class="hijri-date" id="hijriDate"></div>
+        <input type="date" id="datePicker" style="margin-top:20px;">
     </div>
 
-    <div class="time-grid" id="prayerTimes">
-        <!-- JavaScript দিয়ে সময় লোড হবে -->
+    <div class="main-content">
+        <div class="prayer-grid" id="prayerTimes"></div>
     </div>
+
+    <footer>
+        <div class="credit">
+            <p>Developed with ❤️ by <a href="https://khubaybhossain.blogspot.com/" target="_blank">Khubayb Hossain</a></p>
+            <p>© 2024 Paradox Verse. All rights reserved.</p>
+        </div>
+    </footer>
 
 <script>
-// রিয়েল-টাইম ডিজিটাল ঘড়ি
-function updateClock() {
-    const now = new Date();
-    const timeString = now.toLocaleTimeString('en-US', { 
-        hour: 'numeric', 
-        minute: '2-digit', 
-        second: '2-digit',
-        hour12: true 
-    });
-    document.getElementById('liveClock').textContent = timeString;
-}
-setInterval(updateClock, 1000);
-updateClock();
-
 // সময় ফরম্যাটিং ফাংশন
 function formatPrayerTime(time) {
-    return moment(time, 'HH:mm').format('hh:mm A');
+    const [hours, minutes] = time.split(':');
+    const period = hours >= 12 ? 'PM' : 'AM';
+    const formattedHours = hours % 12 || 12;
+    return `${formattedHours}:${minutes} ${period}`;
 }
 
 // নামাজের সময় আপডেটার
@@ -119,50 +142,44 @@ async function updatePrayerTimes(date = new Date()) {
         const data = await response.json();
         const timings = data.data.timings;
 
-        // সময় কার্ড জেনারেট করুন
+        // প্রার্থনা সময় শো করান
         document.getElementById('prayerTimes').innerHTML = `
-            <div class="time-card">
+            <div class="prayer-card">
                 <h3>সেহ্রি শেষ</h3>
                 <p>${formatPrayerTime(timings.Fajr)}</p>
             </div>
-            <div class="time-card">
+            <div class="prayer-card">
                 <h3>ফজর</h3>
                 <p>${formatPrayerTime(timings.Fajr)}</p>
             </div>
-            <div class="time-card">
+            <div class="prayer-card">
                 <h3>যোহর</h3>
                 <p>${formatPrayerTime(timings.Dhuhr)}</p>
             </div>
-            <div class="time-card">
+            <div class="prayer-card">
                 <h3>আসর</h3>
                 <p>${formatPrayerTime(timings.Asr)}</p>
             </div>
-            <div class="time-card">
+            <div class="prayer-card">
                 <h3>মাগরিব/ইফতার</h3>
                 <p>${formatPrayerTime(timings.Maghrib)}</p>
             </div>
-            <div class="time-card">
+            <div class="prayer-card">
                 <h3>ইশা</h3>
                 <p>${formatPrayerTime(timings.Isha)}</p>
             </div>
         `;
 
-        // বাংলা ও হিজরি তারিখ
-        document.getElementById('banglaDate').textContent = `বাংলা তারিখ: ${getBanglaDate(date)}`;
-        document.getElementById('hijriDate').textContent = `التاريخ الهجري: ${moment(date).format('iDD iMMMM iYYYY')}`;
+        // হিজরি তারিখ আপডেট
+        document.getElementById('hijriDate').textContent = 
+            moment(date).format('iDD iMMMM iYYYY');
 
     } catch (error) {
         console.error('ডেটা লোড করতে ব্যর্থ:', error);
     }
 }
 
-// বাংলা তারিখ কনভার্টার
-function getBanglaDate(date) {
-    const banglaMonths = ["বৈশাখ","জ্যৈষ্ঠ","আষাঢ়","শ্রাবণ","ভাদ্র","আশ্বিন","কার্তিক","অগ্রহায়ণ","পৌষ","মাঘ","ফাল্গুন","চৈত্র"];
-    return `${date.getDate()} ${banglaMonths[date.getMonth()]} ${date.getFullYear() - 593}`;
-}
-
-// ইভেন্ট হ্যান্ডলার
+// তারিখ পিকার ইভেন্ট
 document.getElementById('datePicker').addEventListener('change', (e) => {
     updatePrayerTimes(new Date(e.target.value));
 });
